--- a/app/src/main/res/layout/update_layout.xml
+++ b/app/src/main/res/layout/update_layout.xml
@@ -11,101 +11,109 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:paddingBottom="@dimen/activity_vertical_margin"
         android:paddingLeft="@dimen/activity_horizontal_margin"
-        android:paddingRight="@dimen/activity_horizontal_margin"
         android:paddingTop="@dimen/activity_vertical_margin"
+        android:paddingRight="@dimen/activity_horizontal_margin"
+        android:paddingBottom="@dimen/activity_vertical_margin"
 
         >
 
         <TextView
-            android:id="@+id/nama_lowongan_update"
+            android:id="@+id/nama_booking"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
-            android:gravity="center"
-            android:textSize="25sp"
-            android:textColor="@color/white"
             android:drawablePadding="8dp"
-            android:textStyle="bold"
-            android:text="EDIT/DELETE BOOKINGAN"/>
+            android:gravity="center"
+            android:text="EDIT/DELETE BOOKINGAN"
+            android:textColor="@color/white"
+            android:textSize="25sp"
+            android:textStyle="bold" />
 
         <EditText
             android:id="@+id/nama_pembooking"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
-            android:textColor="@color/white"
-            android:maxLength="250"
-            android:inputType="textFilter"
-            android:textColorHint="@color/white"
             android:background="@drawable/input_form"
-            android:hint="Nama Pembooking"/>
+            android:hint="Nama Pembooking"
+            android:inputType="textFilter"
+            android:maxLength="250"
+            android:textColor="@color/white"
+            android:textColorHint="@color/white" />
+
+        <EditText
+            android:id="@+id/tanggalmain1"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:layout_weight="1"
+            android:background="@drawable/input_form"
+            android:hint="tanggal main"
+            android:inputType="textMultiLine"
+            android:textColor="@color/white"
+            android:textColorHint="@color/white" />
 
         <LinearLayout
             android:layout_width="fill_parent"
             android:layout_height="fill_parent">
+
             <EditText
-                android:layout_weight="1"
-                android:id="@+id/deskipsi"
+                android:id="@+id/jam"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textColor="@color/white"
-                android:textColorHint="@color/white"
                 android:layout_marginTop="8dp"
+                android:layout_weight="1"
+                android:background="@drawable/input_form"
+                android:hint="Jam Main"
                 android:inputType="textMultiLine"
-                android:background="@drawable/input_form"
-                android:hint="Jam Main"/>
-            <Button android:id="@+id/resetdeskripsi"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="6dp"
-                android:layout_marginLeft="3dp"
-                android:gravity="center"
                 android:textColor="@color/white"
-                android:background="@drawable/input_form"
-                android:layout_width="wrap_content"
-                android:text="RESET" />
+                android:textColorHint="@color/white" />
         </LinearLayout>
+
         <Spinner
-            android:id="@+id/spinner_jenkel"
+            android:id="@+id/spinnerlap"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
-            android:entries="@array/lapangan"/>
+            android:entries="@array/lapangan" />
 
         <EditText
             android:id="@+id/alamat"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textColor="@color/white"
-            android:textColorHint="@color/white"
             android:layout_marginTop="8dp"
-            android:inputType="textMultiLine"
             android:background="@drawable/input_form"
-            android:hint="Biaya"/>
+            android:hint="Biaya"
+            android:inputType="textMultiLine"
+            android:textColor="@color/white"
+            android:textColorHint="@color/white" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="left"
             android:layout_marginTop="15dp"
-            android:textSize="20sp"
+            android:text="LAINNYA: "
             android:textColor="@color/white"
-            android:textStyle="bold"
-            android:text="LAINNYA: "/>
+            android:textSize="20sp"
+            android:textStyle="bold" />
 
         <EditText
-            android:id="@+id/pendidikan"
+            android:id="@+id/ket"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textColor="@color/white"
-            android:textColorHint="@color/white"
             android:layout_marginTop="8dp"
             android:background="@drawable/input_form"
-            android:hint="Keterangan"/>
+            android:hint="Keterangan"
+            android:textColor="@color/white"
+            android:textColorHint="@color/white" />
 
-        <LinearLayout android:layout_width="fill_parent"
-            android:id="@+id/linearLayout1" android:layout_height="fill_parent">
+        <LinearLayout
+            android:id="@+id/linearLayout1"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent">
+
             <Button
                 android:id="@+id/buttonupdate"
                 android:layout_width="0dp"
